<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <!-- [cap4j-ddd-codegen-maven-plugin:do-not-overwrite] -->
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.only4</groupId>
    <artifactId>only4-KSP-cap4j</artifactId>
    <version>1.2.3</version>
    <packaging>pom</packaging>

    <name>only4-KSP-cap4j</name>
    <modules>
        <module>only4-KSP-cap4j-domain</module>
        <module>only4-KSP-cap4j-application</module>
        <module>only4-KSP-cap4j-adapter</module>
        <module>only4-KSP-cap4j-share</module>
        <module>only4-KSP-cap4j-start</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>17</java.version>
        <cap4j.version>3.1.0-alpha-1</cap4j.version>

        <org.projectlombok.version>1.18.22</org.projectlombok.version>

        <guava.version>31.1-jre</guava.version>
        <commons.lang3.version>3.12.0</commons.lang3.version>
        <commons.collections4.version>4.4</commons.collections4.version>
        <fastjson.version>1.2.83</fastjson.version>

        <spring-boot.version>3.1.12</spring-boot.version>
        <spring-cloud.version>2022.0.5</spring-cloud.version>

        <knife4j.version>4.5.0</knife4j.version>

        <mysql-connector.version>5.1.46</mysql-connector.version>
        <spring-boot-druid.version>1.2.8</spring-boot-druid.version>
        <mybatis-starter.version>3.0.4</mybatis-starter.version>
        <apollo.version>2.0.1</apollo.version>
        <xxljob.version>2.3.1</xxljob.version>

        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
        <therapi-javadoc.version>0.15.0</therapi-javadoc.version>

        <mockito.version>5.2.0</mockito.version>

        <only4j.version>1.2.3</only4j.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>com.only4</groupId>
                <artifactId>only4-bom</artifactId>
                <version>${only4j.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
            <version>${org.projectlombok.version}</version>
        </dependency>

        <dependency>
            <groupId>io.github.netcorepal</groupId>
            <artifactId>cap4j-ddd-codegen-maven-plugin</artifactId>
            <version>${cap4j.version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- 以下自定义 -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- mockito -->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-inline</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>io.github.netcorepal</groupId>
                <artifactId>cap4j-ddd-codegen-maven-plugin</artifactId>
                <version>${cap4j.version}</version>
                <configuration>
                    <basePackage>com.only4</basePackage>
                    <archTemplate>cap4j-ddd-codegen-template-multi-nested.json</archTemplate>
                    <archTemplateEncoding>UTF-8</archTemplateEncoding>
                    <outputEncoding>UTF-8</outputEncoding>
                    <designFile></designFile>
                    <multiModule>true</multiModule>
                    <connectionString>
                        <![CDATA[jdbc:mysql://127.0.0.1:3306/only4-ksp-cap4j?serverTimezone=Asia\Shanghai&useSSL=false&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull]]>
                    </connectionString>
                    <user>root</user>
                    <pwd>123456</pwd>
                    <schema>only4-ksp-cap4j</schema>
                    <table></table>
                    <ignoreTable>\_\_%</ignoreTable>
                    <ignoreFields>db_%</ignoreFields>
                    <versionField>version</versionField>
                    <deletedField>del_flag</deletedField>
                    <readonlyFields>db_created_at,db_updated_at</readonlyFields>
                    <entityClassExtraImports>static org.netcorepal.cap4j.ddd.domain.event.DomainEventSupervisorSupport.events</entityClassExtraImports>
                    <entitySchemaOutputMode>ref</entitySchemaOutputMode>
                    <entitySchemaOutputPackage>domain._share.meta</entitySchemaOutputPackage>
                    <idGenerator>org.netcorepal.cap4j.ddd.domain.distributed.SnowflakeIdentifierGenerator</idGenerator>
                    <fetchType>LAZY</fetchType>
                    <enumValueField>code</enumValueField>
                    <datePackage4Java>java.time</datePackage4Java>
                    <generateDbType>true</generateDbType>
                    <generateSchema>true</generateSchema>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>com.github.therapi</groupId>
                            <artifactId>therapi-runtime-javadoc-scribe</artifactId>
                            <version>${therapi-javadoc.version}</version>
                        </path>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${org.projectlombok.version}</version>
                        </path>
                        <path>
                            <groupId>org.springframework.boot</groupId>
                            <artifactId>spring-boot-configuration-processor</artifactId>
                            <version>${spring-boot.version}</version>
                        </path>
                    </annotationProcessorPaths>
                    <compilerArgs>
                        <arg>-parameters</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <!-- 关闭过滤 -->
                <filtering>false</filtering>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <!-- 引入所有 匹配文件进行过滤 -->
                <includes>
                    <include>application*</include>
                    <include>bootstrap*</include>
                    <include>banner*</include>
                </includes>
                <!-- 启用过滤 即该资源中的变量将会被过滤器中的值替换 -->
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>
</project>
